# pty

./: .gitignore  ARCHITECTURE_SUMMARY.md  CHANGELOG_FLOW_CONTROL.md  CODE_REVIEW_RESPONSE.md  Cargo.toml  DAEMON_ALIGNMENT_PLAN.md  DAEMON_ALIGNMENT_PROGRESS.md  FIXES_APPLIED.md  FLOW_CONTROL_IMPLEMENTATION.md  PR_DESCRIPTION.md  REVIEW_FIXES.md  SIMPLIFICATION_COMPLETE.md  SIMPLIFICATION_SUMMARY.md  client.ts  package.json  server.ts  turbo.json
crates/daemon/: Cargo.toml  package.json  turbo.json
crates/daemon/benches/: daemon_bench.rs
crates/daemon/src/: auth.rs  config.rs  error.rs  main.rs
crates/daemon/src/protocol/: codec.rs  message.rs  mod.rs
crates/daemon/src/server/: handler.rs  mod.rs
crates/daemon/src/session/: emulator.rs  journal.rs  manager.rs  manager.rs.backup  mod.rs  pty.rs
crates/daemon/tests/: flow_control_test.rs  integration_test.rs  sync_refactor_test.rs
docs/: FLOW_CONTROL_QUICK_REF.md  FLOW_CONTROL_QUICK_REF_V2.md  flow-control.md
docs/examples/: flow-control-example.ts
docs/plans/: 2026-02-06-pty-daemon-npm-sdk-design.md
e2e/: e2e.test.ts  flow-control.integration.test.ts  layout.test.ts  package.json  playground-sdk-usage.test.ts  postinstall.test.ts
playground/: client.ts  package.json  server.ts
playground/public/: index.html  main.ts
public/: main.ts
scripts/: benchmark-flow-control.ts  build.ts  postinstall.ts  publish.ts  run-benchmark.sh  test-multi-session-throughput.ts  verify-flow-control.sh
src/: auth.rs  config.rs  error.rs  main.rs
src/protocol/: message.rs  (+1 more)
tests/: e2e.test.ts  integration_test.rs
(+5 files in other folders)
