[package]
name = "vibest-pty-daemon"
version = "0.2.0"
edition = "2021"
description = "High-performance PTY daemon with terminal emulation"

[[bin]]
name = "vibest-pty-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "signal", "fs", "time"] }
rustix = { version = "0.38", features = ["pty", "process", "termios", "event", "fs"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "1.3"
rand = "0.8"
